# CUDA-Path-Tracer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  catch2_tests  justfile
apps/: CMakeLists.txt  main.cpp  main.cu
benchmark_data/: high.csv  low.csv  medium.csv
examples/: benchmark.json  cornell_box.json  defocus_blur.json  logo.json  reflection_showcase.json  spheres_blur.json
include/cuda_path_tracer/: camera.cuh  camera.inl  checker.cuh  color.cuh  dielectric.cuh  error.cuh  hit_info.cuh  image.cuh  image.hpp  lambertian.cuh  material.cuh  metal.cuh  project.cuh  ray.cuh  ray.h  render.h  scene.cuh  shape.cuh  shapes_container.cuh  solid.cuh  sphere.cuh  texture.cuh  utilities.cuh  vec3.cuh  world.cuh
include/cuda_path_tracer/materials/: dielectric.cuh  lambertian.cuh  light.cuh  metal.cuh
include/cuda_path_tracer/shapes/: parallelogram.cuh  rectangular_cuboid.cuh  rotation.cuh  sphere.cuh
report/: report.typ  template.typ  works.bib
report/benchmark_data/: high.csv  low.csv
src/: CMakeLists.txt  camera.cu  error.cu  hit_info.cu  image.cpp  image.cu  project.cu  ray.cu  render.cu  scene.cu  shape.cu  shapes_container.cu  sphere.cu  utilities.cu  vec3.cu  world.cu
src/materials/: dielectric.cu  lambertian.cu  light.cu  metal.cu
src/shapes/: parallelogram.cu  rectangular_cuboid.cu  rotation.cu  sphere.cu
tests/: CMakeLists.txt  test_error.cpp  test_image.cpp  test_image.cu  test_parallelogram.cu  test_random_in_unit_disk.cu  test_ray.cpp  test_ray.cu  test_rectangular_cuboid.cu  test_render_bench.cu  test_rotation.cu  test_sphere.cu  test_vec3.cpp  test_vec3.cu
